Implementando clase Rectangulo P2E3

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/usr/lib/jvm/java-11-openjdk-amd64","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-10"}},"jre:jre:1.10.0"],[{"location":"/home/nicolas/eclipse-workspace/Objetos/practico-2","type":"PROJECT","hints":{"PROJECT_NAME":"practico-2"}},"ABSENT"]]
+[[{"location":"/home/nicolas/eclipse-workspace/Objetos/practico-2","type":"PROJECT","hints":{"PROJECT_NAME":"practico-2"}},"ABSENT"],[{"location":"/usr/lib/jvm/java-11-openjdk-amd64","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-10"}},"jre:jre:1.10.0"]]
